Redactor issue in IE9 spacing while inserting the canned response. This is fixed.

--- a/public/src/redactor.scss
+++ b/public/src/redactor.scss
@@ -588,7 +588,3 @@ body .redactor_toolbar li a.redactor_btn_underline		 	{ background-position: -52
     border-color: #e0e5d6;
 }
 
-.redactor_editor{
-	@include text-formatting();
-}
-
